1.添加了闪屏页，具体逻辑使用协程实现，3s后自动跳转 2.采用BottomNavigationView+ViewPager实现底部导航栏

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">qyh_practice</string>
+    <string name="app_name">仿趣约会</string>
+    <string name="string_welcome">视频相亲找对象</string>
+    <string name="string_blindDate">相亲</string>
+    <string name="string_recommendation">推荐</string>
+    <string name="string_trend">动态</string>
+    <string name="string_message">消息</string>
+    <string name="string_mine">我的</string>
+
 </resources>
