--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="string_message">消息</string>
     <string name="string_mine">我的</string>
 
-
-    <string name="login_header_txt"><![CDATA[为你匹配到1000位同城异性,登录后可见]]></string>
+    <string name="string_wait_get_dentifyingcode">重新发送</string>
+    <string name="string_login_header_txt"><![CDATA[为你匹配到1000位同城异性,登录后可见]]></string>
     <string name="string_login_hint">点击输入手机号码</string>
     <string name="string_phone">手机号</string>
     <string name="string_verifycode">验证码</string>
