--- a/module_common/src/main/res/values/strings.xml
+++ b/module_common/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">module_common</string>
+    <string name="string_common_net_error">暂无网络，不如刷新试试？</string>
 </resources>
